--- a/bigwik/index.html
+++ b/bigwik/index.html
@@ -21,7 +21,9 @@
     </head>
 
     <body>
+        <!--*****MAIN SECTION*****-->
         <main>
+            <!--*****FIRST TOPIC*****-->
             <section class="topic">
                 <div class="topic-heading-container">
                     <h1 class="topic-heading">Website Development Services</h1>
@@ -58,12 +60,10 @@
 
                     </p>
                 </div>
-
-
             </section>
 
+            <!--****SECOND TOPIC****-->
             <section class="topic">
-
                 <div class="topic-heading-container">
                     <h1 class="topic-heading">How  we build the Best Websites</h1>
                 </div>
@@ -126,11 +126,10 @@
                         online audience. After this we also make sure your website is
                         maintained in it's best shape by doing routine maintenance check-ups.
                 </div>
-
             </section>
-
+            
+            <!--****THIRD TOPIC****-->
             <section class="topic">
-
                 <div class="topic-heading-container">
                     <h1 class="topic-heading">Why should you as a buisness have a website on the internet?</h1>
                 </div>
@@ -187,18 +186,11 @@
                         problematic to display anywhere else. Having a website is the best way to show  
                         the extensive amount of inventory, restaurants menus, product options etc.
                     </p>
-
-
-
-
-
                 </div>
-
-
             </section>
 
+            <!--****FOURTH TOPIC****-->
             <section class="topic">
-
                 <div class="topic-heading-container">
                     <h1 class="topic-heading">Why should you choose <a class="home-link-heading" href="https://bigwik.com">Bigwik</a> to build websites for you?</h1>
                 </div>
@@ -227,9 +219,8 @@
                         </li>
                     </ul>
                 </div>
-
-
             </section>
+        
         </main>
     </body>
 </html> 
