--- a/bigwik/index.html
+++ b/bigwik/index.html
@@ -36,15 +36,15 @@
 
                 <div class="topic-text-container">
                     <p class="topic-text">
-                        Bigwik is a digital marketing service which helps you in Everything from creating your
-                        own website to managnig and promoting it in this blog post we will learn about the best
+                        Bigwik is a digital marketing service that helps you in Everything from creating your
+                        own website to managing and promoting it. In this blog post we will learn about the best
                         web development services provided by <a class="home-link" href="https://bigwik.com">bigwik.com</a>
                     </p>
 
                     <p class="topic-text"> 
-                        Web development services are what helps you to create all types of web-based software and
+                        Web development services are services that helps you to create all types of web-based software and
                         ensure great experience for web users. Here at <a>bigwik.com</a> situated
-                        in jaipur. We provide only the best Web based applications and the best 
+                        in Jaipur. We provide only the best Web based applications and the best 
                         web development services.
                     </p>
 
@@ -85,7 +85,7 @@
                     <img class="process-logo" src="images/planning.svg" alt="">
                     <h3>Planning</h3>
                     <p>In this part of the process we present the client with data
-                        of what features the site will have and what it will look like
+                        on what features the site will have and what it will look like
                         this is done by creating a sitemap. The sitemap describes the
                         relations between the main areas of your website.
                     </p>
@@ -109,14 +109,14 @@
                         the planning and graphical designing is applied here. This 
                         process is divided into two major parts. Frontend and backend
                         development. We have two very skillful teams dedicated two
-                        both the taks.
+                        both the tasks.
                     </p>
                 </div>
 
                 <div class="website-building-step5">
                     <img class="process-logo" src="images/testing.svg" alt="">
                     <h3>Testing</h3>
-                    <p>At this point the website is all ready but we cannot launch it
+                    <p>At this point the website is ready but we cannot launch it
                         without testing it for faults.  All kinds of tested are
                         conducted such as speed testing to responsiveness and other
                         design elements, functionality and integrations, and security,
@@ -141,7 +141,7 @@
             <section class="topic">
 
                 <div class="topic-heading-container">
-                    <h1 class="topic-heading">Why should you as a buisness have a website on the internet?</h1>
+                    <h1 class="topic-heading">Why should you as a business have a website on the internet?</h1>
                 </div>     
                 <div class="topic-image">
                     <img class="image-2" src="images/img.gif" alt="">
@@ -150,7 +150,7 @@
                     <h4>It shows Professionalism</h4>
                     <p class="topic-text">
                         Your client/customer simply cannot trust your business in today's day and age
-                        without a high-quality web presence. By having a professional website designed,
+                        without a high-quality web presence. By having a professional website designe,
                         you can show that you care about your brand and business reputation.
                         Adding more functionality to the site will make your brand stand out from the
                         competition. 
@@ -164,21 +164,20 @@
                     </p>
 
                     <h4>Catch up with the competition</h4>
-                    <p class="topic-text">  
-                        Nowadays, whatever feild of buisness you may be in it is sure to be very
-                        Nowadays, whatever feild of buisness you may be in it is sure to be very
+                    <p class="topic-text"> 
+                        Nowadays, whatever feild of business you may be in it is sure to be very
                         competitive, You can gain some ground on your competiton by building a website
                         as good or even better than that of competitors.
                     </p>
                     <p class="topic-text">
-                        When hiring us to build the best web design and development for your website,
+                        When you hire us to build the best web design and development for your website,
                         You can sit down with our team of experts to discuss how to make a more appealing
                         and customer-oriented web presence based on what competitors already have.
                     </p>
 
                     <h4>Answer your client's questions more thoroughly</h4>
                     <p class="topic-text">  
-                        A  website can be a platform to answer all basic questions your potential customers
+                        A  website can be a platform to answer all basic questions of your potential customers
                         may have about your business and brand. When people visit your website, they seek 
                         answers to basic questions like what you do, your products/solutions, your location,
                         contact details, etc. Once they are satisfied with all that, they decide to either 
@@ -205,18 +204,18 @@
                     <ul>
                         <li>
                             Our team doesn't only specializes in building websites be it maintains and promotes
-                            them as well to give your website miaximum traffic and engagement 
+                            them as well to give your website maximum traffic and engagement 
                         </li>
                         <li>
                             Our skilled team of developers will completley understand the features you want on your
-                            websites and givee you your satisfactory results.
+                            websites and gives you satisfactory results.
                         </li>
                         <li>
                             The designing team here at bigwik is very skilled and knows how to get your website
                             clicks by making it look attractive and innovative
                         </li>
                         <li>
-                            We are very flexible in our approach  at building a. Here at bigwik The dedicated teams
+                            We are very flexible in our approach. Here at bigwik The dedicated teams
                             for front-end and back-end development use prominent technologies such as HTML5, CSS3,
                             Javascript, ReactJS and PHP, ASP.net, NodeJS respectivley.
                         </li>
