--- a/bigwik/index.html
+++ b/bigwik/index.html
@@ -69,14 +69,14 @@
             <section class="topic">
 
                 <div class="topic-heading-container">
-                    <h1 class="topic-heading">How  we build the Best Websites</h1>
+                    <h1 class="topic-heading">How  we build the best Websites</h1>
                 </div>
 
                 <div class="website-building-step1">
                     <img class="process-logo" src="images/handshake.svg" alt="">
                     <h3>Information Gathering</h4>
                     <p>In this part we get a very clear understanding of what the
-                       client wants in his website, what your main golas are and
+                       client wants in his website, what your main goals are and
                        the target audience you want. This is done through  having
                        multiple meetings with the clients.
                     </p>
@@ -98,7 +98,7 @@
                     <p>This is the part where your website will take a shape.
                         This is the part where all the visual parts of your website
                         will be added  such as images & icons. The website layout is
-                        designed in this part. Bigwik has the  best website designing team
+                        designed in this part. Bigwik has the one of the best website designing team
                     </p>
                 </div>
 
@@ -118,7 +118,7 @@
                     <img class="process-logo" src="images/testing.svg" alt="">
                     <h3>Testing</h3>
                     <p>At this point the website is ready but we cannot launch it
-                        without testing it for faults.  All kinds of tested are
+                        without testing it for faults.  All kinds of tests are
                         conducted such as speed testing to responsiveness and other
                         design elements, functionality and integrations, and security,
                         among others.
@@ -130,8 +130,8 @@
                     <img class="process-logo" src="images/maintenance.png" alt="">
                     <h3>Launch & Maintenance</h3>
                     <p>
-                        After meticulous Quality Assurance and testing. We push the
-                        website live after your approval, making it available to the
+                        After meticulous Quality Assurance, Testing and the client's
+                        approval we push the website live, making it available to the
                         online audience. After this we also make sure your website is
                         maintained in it's best shape by doing routine maintenance check-ups.
                 </div>
@@ -151,7 +151,7 @@
                     <h4>It shows Professionalism</h4>
                     <p class="topic-text">
                         Your client/customer simply cannot trust your business in today's day and age
-                        without a high-quality web presence. By having a professional website designe,
+                        without a high-quality web presence. By having a professional website designed,
                         you can show that you care about your brand and business reputation.
                         Adding more functionality to the site will make your brand stand out from the
                         competition. 
@@ -204,8 +204,8 @@
                 </div>
                     <ul>
                         <li>
-                            Our team doesn't only specializes in building websites be it maintains and promotes
-                            them as well to give your website maximum traffic and engagement 
+                            Our team doesn't only specializes in building websites but it maintains and promotes
+                            them as well to give your website maximum traffic and engagement. 
                         </li>
                         <li>
                             Our skilled team of developers will completley understand the features you want on your
@@ -213,11 +213,11 @@
                         </li>
                         <li>
                             The designing team here at bigwik is very skilled and knows how to get your website
-                            clicks by making it look attractive and innovative
+                            clicks by making it look attractive and innovative.
                         </li>
                         <li>
                             We are very flexible in our approach. Here at bigwik The dedicated teams
-                            for front-end and back-end development use prominent technologies such as HTML5, CSS3,
+                            for frontend and backend development use prominent technologies such as HTML5, CSS3,
                             Javascript, ReactJS and PHP, ASP.net, NodeJS respectivley.
                         </li>
                         <li>
