--- a/bigwik/index.html
+++ b/bigwik/index.html
@@ -7,7 +7,7 @@
         <title>Web Development Services</title>
         <meta name="description" content="Web services provided by BigWik are considered best web services in Jaipur.BigWik provide digital marketing services that helps you in creating your website.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="keyword"  content="Top web services, Best web devlopment services, web service design and devlopment, Web devlopment services in Jaipur, Web devvlopment Service Blog, Digital Service in Jaipur,Web devlopment services near me, Benefits of Web devlopment Service,Web Devlopment services in Rajasthan"
+        <meta name="keyword"  content="Top web services, Best web devlopment services, web service design and devlopment, Web devlopment services in Jaipur, Web devvlopment Service Blog, Digital Service in Jaipur,Web devlopment services near me, Benefits of Web devlopment Service,Web Devlopment services in Rajasthan, graphical design, website design services in India "
         <link rel="stylesheet" href="css/styles.css" type="text/css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -226,7 +226,17 @@
                         </li>
                     </ul>
                 </div>
-            
+              <div class="topic-heading-container">
+                    <h1 class="topic-heading">FAQ?</h1>
+                </div>
+                    <h4>I have an art gallery is there any need of website </h4>
+                    <p>Well you can sell you art work at art gallery but it is limited in certain area but if you want to recognize your work then you have to popularize your work among more people and Website is best choice for this.Websites have no limitaion you can put you work on websites and fromn here you can also sell your work.Bigwik is a best platform if you want to build a website for your art gallery.We have best and top web devloper who work on your website  </p>
+                    <br>
+                    <h4>Will my website be mobile-friendly?</h4>
+                    <p>Nowdays we use website for bookings, shopping, online food dilivey, socialmedia etc. people do these task on mobile phone. So devloping a responsive website will help you to run your website on phone or tablet, ipad etc devices and it also increase trafic on website.<br>We ensure to make your website responsive that would make your visitor more eye catching. </p>
+                     <br>
+                     <h4>Can I update the website myself once it's built?</h4>
+                     <p>Yes, you can update your website by yourself once it's built and we will definately helps you to update your website on regular time. Our devloper make your website a dynamic and yoc can ask your customer suggestion for improving you website.<br> At BigWik,we provide a complete guidence on how you update your website on regular basis. we also provide a service support form our staff on you any doubt. </p>
             </section>
 
         </main>
